# welcome-to-alonzo

./: README.md  blockfrostHello.plutus
blockfrost-hello/: blockfrost-hello.cabal
blockfrost-hello/app/: Main.hs
blockfrost-hello/src/: BlockfrostHello.hs  Contract.hs  Trace.hs
