cabal-version: 2.4

name:                   blockfrost-hello
version:                1.27.0
description:            End to end examples of creating and executing Plutus scripts.
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
build-type:             Simple
extra-source-files:     README.md

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      BlockfrostHello
                      , Contract
                      , Trace

  build-depends:        bytestring
                      , cardano-api
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , serialise

     -- trace and co
                      , aeson
                      , containers
                      , data-default
                      , pretty-simple
                      , freer-extras
                      , freer-simple
                      , playground-common
                      , plutus-contract
                      , streaming
                      , foldl
                      , text
                      , lens
                      , prettyprinter
                      , prettyprinter-ansi-terminal


  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

executable blockfrost-hello-gen
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        aeson
                      , cardano-api
                      , cardano-ledger-alonzo
                      , blockfrost-hello
                      , plutus-ledger-api
                      , plutus-tx
                      , bytestring
                      , text


